--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Mandatory settings
 
-name: Chalk
+name: Intellectual Masturbation
 paginate: 25
 url: # add your site url (format: https://example.com/)
-blog_theme: light # Or use dark
+blog_theme: dark #light # Or use dark
 
 # Optional settings
 
 about_enabled: false # Change to true if you wish to show an icon in the navigation that redirects to the about page
-discus_identifier: # Add your Disqus identifier
+discus_identifier: intellectualmasturbation# Add your Disqus identifier
 ga_analytics: # Add your GA Tracking Id
 local_fonts: false # Change to true if you wish to use local fonts
 rss_enabled: true # Change to false if not
