--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,7 @@
 machine:
+environment:
+    USER_NAME: intellectualmasturbation
+    USER_EMAIL: pranaypratyush1@gmail.com
   ruby:
     version: 2.4.1
 
