--- a/_config.yml
+++ b/_config.yml
@@ -8,20 +8,20 @@ blog_theme: dark #light # Or use dark
 # Optional settings
 
 about_enabled: false # Change to true if you wish to show an icon in the navigation that redirects to the about page
-discus_identifier: intellectualmasturbation# Add your Disqus identifier
+discus_identifier: intellectualmasturbation # Add your Disqus identifier
 ga_analytics: # Add your GA Tracking Id
 local_fonts: false # Change to true if you wish to use local fonts
 rss_enabled: true # Change to false if not
 scrollappear_enabled: true # Change to false to disable
 social:
   dribbble: # Add your Dribbble handle
-  facebook: # Add your Facebook handle
+  facebook: pranay.pratyush # Add your Facebook handle
   flickr: # Add your Flickr handle
   github: # Add your GitHub handle
   linkedin: # Add your LinkedIn handle
   twitter: # Add your Twitter handle
-  email: # Add your Email address
-  bitcoin: # Add your Bitcoin link or address
+  email: pranay.pratyush@gmail.com # Add your Email address
+  bitcoin: 1Pd1KsFshbF364Bq1oNoN4kLPzkm41osFA # Add your Bitcoin link or address
 
 # Important settings (change at own risk)
 
