--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ blog_theme: dark #light # Or use dark
 
 about_enabled: false # Change to true if you wish to show an icon in the navigation that redirects to the about page
 discus_identifier: intellectualmasturbation # Add your Disqus identifier
-ga_analytics: # Add your GA Tracking Id
+ga_analytics: UA-107868395-1 # Add your GA Tracking Id
 local_fonts: false # Change to true if you wish to use local fonts
 rss_enabled: false # Change to false if not
 scrollappear_enabled: true # Change to false to disable
